--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logoo.png" />
+    <link rel="icon" href="logoo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,9 +10,8 @@
       content="A vos couleurs, spécialiste de la personnalisation de tout textile (numérique, sérigraphie, transferts, flex, sublimation et broderie...)"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- <script src="https://kit.fontawesome.com/d4d9c68657.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/d4d9c68657.js" crossorigin="anonymous"></script>
     <!-- <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script> -->
     <!-- <script nomodule  src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> -->
     
