--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
       name="description"
       content="A vos couleurs, spécialiste de la personnalisation de tout textile (numérique, sérigraphie, transferts, flex, sublimation et broderie...)"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="logoo.png" />
+    <link rel="manifest" href="manifest.json" />
     <script src="https://kit.fontawesome.com/d4d9c68657.js" crossorigin="anonymous"></script>
     <!-- <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script> -->
     <!-- <script nomodule  src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> -->
